「必須」のcss追加

--- a/app/assets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/user/login.css
@@ -18,3 +18,13 @@
   text-align: center;
   color: red;
 }
+
+.indispensable {
+  background: #ea352d;
+  margin-left: 8px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+}
