--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,15 +130,15 @@
       <%# 商品がある場合 %>
       <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to "#" do %>
+          <%= link_to item_path(item.id), method: :get %>
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
 
-            <%# 商品が売れていればsold outを表示しましょう %>
-            <div class='sold-out'>
-            <%#  <span>Sold Out!!</span> %>
-            </div>
-            <%# //商品が売れていればsold outを表示しましょう %>
+            <%# if item.purchase_record.present? %>
+              <div class='sold-out'>
+              <%#  <span>Sold Out!!</span> %>
+              </div>
+            <%# end %>
 
           </div>
           <div class='item-info'>
@@ -153,7 +153,6 @@
               </div>
             </div>
           </div>
-          <% end %>
         </li>
       <% end %>
       <%# //商品がある場合 %>
