link_toで、doとendを消してしまったので、修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,29 +130,30 @@
       <%# 商品がある場合 %>
       <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to item_path(item.id), method: :get %>
-          <div class='item-img-content'>
-            <%= image_tag item.image, class: "item-img" %>
+          <%= link_to item_path(item.id), method: :get do %>
+            <div class='item-img-content'>
+              <%= image_tag item.image, class: "item-img" %>
 
-            <%# if item.purchase_record.present? %>
-              <div class='sold-out'>
-              <%#  <span>Sold Out!!</span> %>
-              </div>
-            <%# end %>
+              <%# if item.purchase_record.present? %>
+                <div class='sold-out'>
+                <%#  <span>Sold Out!!</span> %>
+                </div>
+              <%# end %>
 
-          </div>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              <%= item.item_name %>
-            </h3>
-            <div class='item-price'>
-              <span><%= item.price %>円<br><%= item.shipping_cost.name %></span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
+            </div>
+            <div class='item-info'>
+              <h3 class='item-name'>
+                <%= item.item_name %>
+              </h3>
+              <div class='item-price'>
+                <span><%= item.price %>円<br><%= item.shipping_cost.name %></span>
+                <div class='star-btn'>
+                  <%= image_tag "star.png", class:"star-icon" %>
+                  <span class='star-count'>0</span>
+                </div>
               </div>
             </div>
-          </div>
+          <% end %>
         </li>
       <% end %>
       <%# //商品がある場合 %>
